# expressLRS_relay

./: CMakeLists.txt  Frsky_Elrs_Relay.uf2  README.md  openTx_ELRS direct 4 MHz, 20 M Samples [19].logicdata  platformio.ini
src/: config.h  config_basic.h  crc.cpp  crc.h  crsf.cpp  crsf.h  crsf_1pin.cpp  crsf_uart_tx_rx.pio  crsf_uart_tx_rx.pio.h  crsf_uart_tx_rx2.pio  main.cpp  ppm.cpp  ppm.h  ppm.pio  sbus.cpp  sbus.h  sport.cpp  sport.h  sport_uart_tx_rx.pio  tools.cpp  tools.h  uart_tx_rx.pio  uart_tx_rx.pio.h
uf2/: APPLICATION.uf2
